adjust burn in text alignment

--- a/playblast/blender_manifest.toml
+++ b/playblast/blender_manifest.toml
@@ -5,7 +5,7 @@ schema_version = "1.0.0"
 id = "playblast"
 version = "1.0.0"
 name = "Playblast"
-tagline = "Blender playblast tool similarly to Maya but with more features"
+tagline = "Blender playblast tool similarly to Maya"
 maintainer = "FhyTan <FhyTan@outlook.com>"
 # Supported types: "add-on", "theme"
 type = "add-on"
