--- a/playblast/blender_manifest.toml
+++ b/playblast/blender_manifest.toml
@@ -37,10 +37,7 @@ license = ["SPDX:GPL-3.0-or-later"]
 
 # Optional: bundle 3rd party Python modules.
 # https://docs.blender.org/manual/en/dev/advanced/extensions/python_wheels.html
-# wheels = [
-#   "./wheels/hexdump-3.3-py3-none-any.whl",
-#   "./wheels/jsmin-3.0.1-py3-none-any.whl",
-# ]
+wheels = ["./wheels/fonttools-4.60.1-cp311-cp311-win_amd64.whl"]
 
 # Optional: add-ons can list which resources they will require:
 # * files (for access of any filesystem operations)
