--- a/playblast/blender_manifest.toml
+++ b/playblast/blender_manifest.toml
@@ -15,7 +15,7 @@ type = "add-on"
 
 # Optional list defined by Blender and server, see:
 # https://docs.blender.org/manual/en/dev/advanced/extensions/tags.html
-tags = ["Animation", "Video", "3D View", "Camera", "Pipeline"]
+tags = ["3D View", "Animation", "Camera", "Pipeline"]
 
 blender_version_min = "4.2.0"
 # # Optional: Blender version that the extension does not support, earlier versions are supported.
@@ -37,7 +37,7 @@ license = ["SPDX:GPL-3.0-or-later"]
 
 # Optional: bundle 3rd party Python modules.
 # https://docs.blender.org/manual/en/dev/advanced/extensions/python_wheels.html
-wheels = ["./wheels/fonttools-4.60.1-cp311-cp311-win_amd64.whl"]
+wheels = ["./wheels/fonttools-4.60.1-py3-none-any.whl"]
 
 # Optional: add-ons can list which resources they will require:
 # * files (for access of any filesystem operations)
