--- a/playblast/blender_manifest.toml
+++ b/playblast/blender_manifest.toml
@@ -5,13 +5,13 @@ schema_version = "1.0.0"
 id = "playblast"
 version = "1.0.0"
 name = "Playblast"
-tagline = "Blender playblast tool similarly to Maya"
+tagline = "Blender playblast tool similarly to Maya playblast"
 maintainer = "FhyTan <FhyTan@outlook.com>"
 # Supported types: "add-on", "theme"
 type = "add-on"
 
 # Optional link to documentation, support, source files, etc
-# website = "https://extensions.blender.org/add-ons/my-example-package/"
+website = "https://github.com/FhyTan/blender-playblast"
 
 # Optional list defined by Blender and server, see:
 # https://docs.blender.org/manual/en/dev/advanced/extensions/tags.html
@@ -53,9 +53,9 @@ wheels = ["./wheels/fonttools-4.60.1-py3-none-any.whl"]
 # Keep this a single short sentence without a period (.) at the end.
 # For longer explanations use the documentation or detail page.
 #
-# [permissions]
+[permissions]
 # network = "Need to sync motion-capture data to server"
-# files = "Import/export FBX from/to disk"
+files = "Save playblast videos in specified output folder"
 # clipboard = "Copy and paste bone transforms"
 
 # Optional: build settings.
