--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "blender-playblast"
+name = "blender-anim-reviewer"
 version = "1.0.0"
-description = "Add your description here"
+description = "Enhance blender playblast capabilities for animation review"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
@@ -10,6 +10,6 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "bpy>=4.5.3",
+    "bpy>=4.5",
     "fake-bpy-module>=20251003",
 ]
